--- a/_includes/header/header-slim.html
+++ b/_includes/header/header-slim.html
@@ -14,9 +14,9 @@
               </a>
               <div class="link-list-wrapper collapse" id="menu1">
                 <ul class="link-list"><ul>
-                    {% for link in site.links %}
-                      <li><a href="{{ link.url }}">{{ link.text }}</a></li>
-                    {% endfor %}
+                  <li><a href="https://www.esempio1.com">Link 1</a></li>
+                  <li><a href="https://www.esempio2.com">Link 2</a></li>
+                  <li><a href="https://www.enteappartenenza.com">Ente appartenenza/Owner</a></li>
                 </ul>
               </div>
             </nav>
