--- a/_includes/header/header-slim.html
+++ b/_includes/header/header-slim.html
@@ -13,10 +13,10 @@
                 </svg>
               </a>
               <div class="link-list-wrapper collapse" id="menu1">
-                <ul class="link-list"><ul>
-                  <li><a href="https://www.esempio1.com">Link 1</a></li>
-                  <li><a href="https://www.esempio2.com">Link 2</a></li>
-                  <li><a href="https://www.enteappartenenza.com">Ente appartenenza/Owner</a></li>
+                <ul class="link-list">
+                  <li><a href="#">Link 1</a></li>
+                  <li><a href="#">Link 2</a></li>
+                  <li class="d-lg-none"><a href="#">Ente appartenenza/Owner</a></li>
                 </ul>
               </div>
             </nav>
