--- a/_includes/header/header-navigation.html
+++ b/_includes/header/header-navigation.html
@@ -39,14 +39,9 @@ tutte le pagine del sito che:
               </div>
               {% comment %}
               <!-- Search button -->
-              <div class="it-search-wrapper">
-                <span class="d-none d-md-block">Cerca</span>
-                <a class="search-link rounded-icon" href="#" aria-label="Cerca">
-                  <svg class="icon">
-                    <use xlink:href="{{ site.baseurl }}/assets/bootstrap-italia/dist/svg/sprite.svg#it-search"></use>
-                  </svg>
-                </a>
-              </div>
+                <div class="avatar size-lg">
+                  <img src="https://randomuser.me/api/portraits/women/41.jpg" alt="Anna Barbieri">
+                </div>
               {% endcomment %}
             </div>
           </div>
