--- a/_includes/footer/footer.html
+++ b/_includes/footer/footer.html
@@ -36,6 +36,7 @@
         <li class="list-inline-item"><a href="{{ site.baseurl }}{{ footer-link[1].url }}" title="{{ footer-link[1].name }}">{{ footer-link[1].name }}</a></li>
         {% endfor %}
       </ul>
+        <a href="https://www.agid.gov.it/it">Powed By <b>AGID</b></a>
     </div>
   </div>
 </footer>
