--- a/_includes/header/header-navigation.html
+++ b/_includes/header/header-navigation.html
@@ -42,7 +42,9 @@ tutte le pagine del sito che:
                 <button class="btn close-menu" type="button"><span class="it-close"></span>close</button>
               </div>
               <div class="menu-wrapper">
-                    <a class="nav-link" href="/"><span>/</span></a>
+                    <a class="nav-link" href="https://gjdev-org.github.io/UPID/"><span>home page</span></a>
+                    <a class="nav-link" href="https://gjdev-org.github.io/UPID/gjones/"><span>gjones</span></a>
+                    <a class="nav-link" href="https://gjdev-org.github.io/UPID/areetematiche/"><span>Aree Tematiche</span></a>
               </div>
             </div>
           </nav>
