--- a/_includes/header/header-navigation.html
+++ b/_includes/header/header-navigation.html
@@ -1,1 +1,29 @@
+{% comment %}
+Le pagine che vengono incluse in questo menù sono un sottoinsieme di
+tutte le pagine del sito che:
+- hanno la stessa lingua della pagina corrente
+- hanno l'attributo "order" valorizzato
+{% endcomment %}
 
+{% assign current_lang_menu_pages = site.pages | where: "lang", page.lang | where_exp: "page", "page.order != nil" | sort: "order" %}
+<div class="it-nav-wrapper">
+  <div class="it-header-center-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="it-header-center-content-wrapper">
+            <div class="it-brand-wrapper">
+              <a href="#">
+                <img class="icon" src="{{ site.baseurl }}{{ site.data.t.icon }}" alt="{{ site.name }} logo">
+                <div class="it-brand-text">
+                  <h2 class="no_toc">{{ site.data.t.name[page.lang] }}</h2>
+                  <h3 class="no_toc d-none d-md-block">{{ site.data.t.description[page.lang] }}</h3>
+                </div>
+              </a>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
