--- a/_includes/header/header-navigation.html
+++ b/_includes/header/header-navigation.html
@@ -35,8 +35,8 @@ tutte le pagine del sito che:
                   userGreeting.style.gap = '10px';
 
                   userGreeting.innerHTML = `
-                    <span>Ciao, ${name}</span>
-                    <img src="${photo}" alt="Foto profilo" style="width: 40px; height: 40px; border-radius: 50%;">
+                    <span><h3><b>Ciao, ${name}</b></h3></span>
+                    <img src="${photo}" alt="Foto profilo" style="width: 60px; height: 60px; border-radius: 50%;">
                   `;
                   header.appendChild(userGreeting);
                 }
