--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   {%- include header/header.html -%}
-  {{ content }}
+  {% include heroe.html %}
   {%- include footer/footer.html -%}
   {%- include cookiebar.html -%}
   {%- include scripts.html -%}
