--- a/_includes/footer/footer-col-1.html
+++ b/_includes/footer/footer-col-1.html
@@ -1,10 +1,13 @@
 <h4><a href="#" title="Vai alla pagina: Contatti">Contatti</a></h4>
 <p>
-  <strong>Lorem ipsum</strong><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  <strong>Crediti e informazioni : </strong><br> In questa sezione troverai i crediti del sito e le privacy.
 </p>
 <div class="link-list-wrapper">
   <ul class="footer-list link-list clearfix">
-    <li><a class="list-item" href="#" title="Link 1">Link 1</a></li>
-    <li><a class="list-item" href="#" title="Link 2">Link 2</a></li>
+    <li><a class="list-item" href="https://blog.gjdev.it">Blog</a></li>
+    <li><a class="list-item" href="https://gjdev.it/privacy/">Privacy</a></li>
+    <h6>Il sito è gestito da: </h6>
+    <li><a class="list-item" href="https://github.com/">GitHub</a></li>
+    <li><a class="list-item" href="https://gjdev.it/UPID/">UPID gjdev</a></li>
   </ul>
 </div>
