--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -1,6 +1,24 @@
----
-layout: page
----
+<!doctype html>
+<html lang="{{ page.lang }}">
+<head>
+  {% include meta.html %}
+  {% include styles.html %}
+  {%- if jekyll.environment == 'production' -%}
+  {%- include analytics/google-analytics.html -%}
+  {%- endif -%}
+</head>
+<body>
+  {%- include header/header.html -%}
+  {% content %}
+  
+
+
+
+
+
+
+
+
 <style>
   .main-container {
   display: flex;
@@ -97,3 +115,10 @@ h3 {
     <!-- Continua con il contenuto -->
   </section>
 </div>
+
+  {%- include footer/footer.html -%}
+  {%- include cookiebar.html -%}
+  {%- include scripts.html -%}
+</body>
+</html>
+
