--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   {%- include header/header.html -%}
-  {% content %}
+  { content }
   {%- include footer/footer.html -%}
   {%- include cookiebar.html -%}
   {%- include scripts.html -%}
